// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callUserAssignedTransferListsAndUpdateState sets user assigned transfer lists and there visible state for non voice interactions calls updateUserAssignedTransferLists generator function 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState sets user assigned transfer lists and there visible state for non voice interactions selects tenant and agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState sets user assigned transfer lists and there visible state for non voice interactions selects userAssginedTransferLists 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState sets user assigned transfer lists and there visible state for non voice interactions sets non-voice interaction transfer lists by dispatching setUserAssignedTransferLists 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "channelType": "nonVoice",
        "type": "app/TransferMenu/SET_USER_ASSIGNED_TRANSFER_LISTS",
        "userAssignedTransferLists": Array [
          Object {
            "endpoints": Array [
              Object {
                "contactType": "queue",
                "endPointRenderUUID": "mockEndPointUUID1",
                "hierarchy": "mockHierarchy1",
                "hierarchyRenderUUID": "mockEndPointUUID1",
              },
            ],
            "id": "mockTransferListId1",
            "name": "mockTransferListName",
            "transferListRenderUUID": "mockTransferListUUID1",
          },
          Object {
            "endpoints": Array [
              Object {
                "contactType": "queue",
                "endPointRenderUUID": "mockEndPointUUID4",
                "hierarchy": "mockHierarchy4",
                "hierarchyRenderUUID": "mockEndPointUUID4",
              },
            ],
            "id": "mockTransferListId2",
            "name": "mockTransferListName2",
            "transferListRenderUUID": "mockTransferListUUID2",
          },
        ],
      },
      "channel": null,
    },
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState sets user assigned transfer lists and there visible state for non voice interactions sets userAssignedTransferListsVisibleState to false by dispatching setUserAssignedTransferListsVisibleState action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "type": "app/TransferMenu/SET_USER_ASSIGNED_TRANSFER_LIST_VISIBLE_STATE",
        "userAssignedTransferListsVisibleState": Object {
          "mockTransferListId1": false,
          "mockTransferListId2": false,
        },
      },
      "channel": null,
    },
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState sets user assigned transfer lists and there visible state for non voice interactions sets visibleStateOfAllAssignedTransferLists to false by dispatching setVisibleStateOfAllUserAssignedTransferLists action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "type": "app/TransferMenu/SET_VISIBLE_STATE_OF_ALL_USER_ASSIGNED_TRANSFER_LISTS",
        "visibleStateOfAllUserAssignedTransferLists": false,
      },
      "channel": null,
    },
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState sets user assigned transfer lists and there visible state for the voice interactions calls updateUserAssignedTransferLists generator function 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState sets user assigned transfer lists and there visible state for the voice interactions selects tenant and agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState sets user assigned transfer lists and there visible state for the voice interactions selects userAssginedTransferLists 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState sets user assigned transfer lists and there visible state for the voice interactions sets userAssignedTransferListsVisibleState to true by dispatching setUserAssignedTransferListsVisibleState action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "type": "app/TransferMenu/SET_USER_ASSIGNED_TRANSFER_LIST_VISIBLE_STATE",
        "userAssignedTransferListsVisibleState": Object {
          "mockTransferListId1": true,
          "mockTransferListId2": true,
        },
      },
      "channel": null,
    },
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState sets user assigned transfer lists and there visible state for the voice interactions sets visibleStateOfAllAssignedTransferLists to true by dispatching setVisibleStateOfAllUserAssignedTransferLists action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "type": "app/TransferMenu/SET_VISIBLE_STATE_OF_ALL_USER_ASSIGNED_TRANSFER_LISTS",
        "visibleStateOfAllUserAssignedTransferLists": true,
      },
      "channel": null,
    },
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState when the current logged in agent doesnot have any transfer lists calls updateUserAssignedTransferLists generator function 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState when the current logged in agent doesnot have any transfer lists selects tenant and agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState when the current logged in agent doesnot have any transfer lists selects userAssginedTransferLists 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState when the current logged in agent doesnot have any transfer lists sets userAssignedTransferListsVisibleState to null by dispatching setUserAssignedTransferListsVisibleState action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "type": "app/TransferMenu/SET_USER_ASSIGNED_TRANSFER_LIST_VISIBLE_STATE",
        "userAssignedTransferListsVisibleState": null,
      },
      "channel": null,
    },
  },
}
`;

exports[`callUserAssignedTransferListsAndUpdateState when the current logged in agent doesnot have any transfer lists sets visibleStateOfAllAssignedTransferLists to null by dispatching setVisibleStateOfAllUserAssignedTransferLists action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "type": "app/TransferMenu/SET_VISIBLE_STATE_OF_ALL_USER_ASSIGNED_TRANSFER_LISTS",
        "visibleStateOfAllUserAssignedTransferLists": null,
      },
      "channel": null,
    },
  },
}
`;

exports[`changeAgentsListVisibleState collpase/expand agentsList Transfer options selects tenant-id, agent-id and previous agentsListVisibleState 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`changeAgentsListVisibleState collpase/expand agentsList Transfer options updates agentsListVisibleState to false by dispatching setAgentsListVisibleState 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "agentsListVisibleState": false,
        "type": "app/TransferMenu/SET_AGENTS_LIST_VISIBLE_STATE",
      },
      "channel": null,
    },
  },
}
`;

exports[`changeAgentsListVisibleState collpase/expand agentsList Transfer options updates localStorage with agentsListVisibleState set to false 1`] = `
Array [
  Array [
    "agentsListVisibleState-tenantId-agentId",
    false,
  ],
]
`;

exports[`changeQueuesListVisibleState collpase/expand queuesList Transfer options selects tenant-id, agent-id and previous queuesListVisibleState 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`changeQueuesListVisibleState collpase/expand queuesList Transfer options updates localStorage with queuesListVisibleState set to false 1`] = `
Array [
  Array [
    "queuesListVisibleState-tenantId-agentId",
    false,
  ],
]
`;

exports[`changeQueuesListVisibleState collpase/expand queuesList Transfer options updates queuesListVisibleState to false by dispatching setQueuesListVisibleState 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "queuesListVisibleState": false,
        "type": "app/TransferMenu/SET_QUEUES_LIST_VISIBLE_STATE",
      },
      "channel": null,
    },
  },
}
`;

exports[`changeUserAssignedTransferListVisibleState selects tenant-id, agent-id and previous transferListVisibleState 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`changeUserAssignedTransferListVisibleState updates localStorage with userAssignedTransferListsVisibleState set to false 1`] = `
Array [
  Array [
    "assignedTransferListHiddenState/tenantId/agentId/mockTransferListId",
    true,
  ],
]
`;

exports[`changeUserAssignedTransferListVisibleState updates userAssignedTransferListsVisibleState to false by dispatching setUserAssignedTransferListsVisibleState 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "type": "app/TransferMenu/SET_USER_ASSIGNED_TRANSFER_LIST_VISIBLE_STATE",
        "userAssignedTransferListsVisibleState": Object {
          "mockTransferListId": true,
        },
      },
      "channel": null,
    },
  },
}
`;

exports[`changeVisibleStateofAllUserAssignedTransferLists selects tenant-id, agent-id and previous transferListVisibleState 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`changeVisibleStateofAllUserAssignedTransferLists updates localStorage with visibleStateOfAllFlowTransferLists set to false 1`] = `
Array [
  Array [
    "visibleStateOfAllAssignedTransferLists/tenantId/agentId",
    true,
  ],
]
`;

exports[`changeVisibleStateofAllUserAssignedTransferLists updates visibleStateOfAllAssignedTransferLists to false by dispatching setVisibleStateOfAllUserAssignedTransferLists 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "type": "app/TransferMenu/SET_VISIBLE_STATE_OF_ALL_USER_ASSIGNED_TRANSFER_LISTS",
        "visibleStateOfAllUserAssignedTransferLists": true,
      },
      "channel": null,
    },
  },
}
`;

exports[`setAgentsQueuesInitialVisibleState when queuesListHiddenState and agentsListHiddenState not saved in localStorage gets localStorage properties that are used to set queuesListVisibleState and agentsListVisibleState 1`] = `
Array [
  Array [
    "queuesListVisibleState-tenantId-agentId",
  ],
  Array [
    "agentsListVisibleState-tenantId-agentId",
  ],
]
`;

exports[`setAgentsQueuesInitialVisibleState when queuesListHiddenState and agentsListHiddenState not saved in localStorage selects tenant and agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`setAgentsQueuesInitialVisibleState when queuesListHiddenState and agentsListHiddenState not saved in localStorage sets agentsListVisibleState to true by dispatching setAgentsListVisibleState action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "agentsListVisibleState": true,
        "type": "app/TransferMenu/SET_AGENTS_LIST_VISIBLE_STATE",
      },
      "channel": null,
    },
  },
}
`;

exports[`setAgentsQueuesInitialVisibleState when queuesListHiddenState and agentsListHiddenState not saved in localStorage sets queuesListVisibleState to true by dispatching setQueuesListVisibleState action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "queuesListVisibleState": true,
        "type": "app/TransferMenu/SET_QUEUES_LIST_VISIBLE_STATE",
      },
      "channel": null,
    },
  },
}
`;

exports[`setAgentsQueuesInitialVisibleState when queuesListHiddenState and agentsListHiddenState saved in localStorage gets localStorage properties that are used to set queuesListVisibleState and agentsListVisibleState 1`] = `
Array [
  Array [
    "queuesListVisibleState-tenantId-agentId",
  ],
  Array [
    "agentsListVisibleState-tenantId-agentId",
  ],
]
`;

exports[`setAgentsQueuesInitialVisibleState when queuesListHiddenState and agentsListHiddenState saved in localStorage selects tenant and agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`setAgentsQueuesInitialVisibleState when queuesListHiddenState and agentsListHiddenState saved in localStorage sets agentsListVisibleState to false by dispatching setAgentsListVisibleState action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "agentsListVisibleState": false,
        "type": "app/TransferMenu/SET_AGENTS_LIST_VISIBLE_STATE",
      },
      "channel": null,
    },
  },
}
`;

exports[`setAgentsQueuesInitialVisibleState when queuesListHiddenState and agentsListHiddenState saved in localStorage sets queuesListVisibleState to false by dispatching setQueuesListVisibleState action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "queuesListVisibleState": false,
        "type": "app/TransferMenu/SET_QUEUES_LIST_VISIBLE_STATE",
      },
      "channel": null,
    },
  },
}
`;

exports[`tearDownTransferMenuStates tearDownTransferMenuStates for non-voice interactions gets voice and currently selected interactionId 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`tearDownTransferMenuStates tearDownTransferMenuStates for non-voice interactions sets non-voice interactionTransferListsLoadingState to true 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": undefined,
        "isLoading": true,
        "type": "app/AgentDesktop/SET_INTERACTION_TRANSFER_LISTS_LOADING_STATE",
      },
      "channel": null,
    },
  },
}
`;

exports[`tearDownTransferMenuStates tearDownTransferMenuStates for non-voice interactions sets showTransferDialpad to its default state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "showTransferDialpad": false,
        "type": "app/TransferMenu/SET_SHOW_TRANSFER_DIAL_PAD",
      },
      "channel": null,
    },
  },
}
`;

exports[`tearDownTransferMenuStates tearDownTransferMenuStates for non-voice interactions sets transferSearchInput to its default state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "transferSearchInput": "",
        "type": "app/TransferMenu/SET_TRANSFER_SEARCH_INPUT",
      },
      "channel": null,
    },
  },
}
`;

exports[`tearDownTransferMenuStates tearDownTransferMenuStates for non-voice interactions sets transferTabIndex to its default state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "transferTabIndex": 0,
        "type": "app/TransferMenu/SET_TRANSFER_TAB_INDEX",
      },
      "channel": null,
    },
  },
}
`;

exports[`tearDownTransferMenuStates tearDownTransferMenuStates for non-voice interactions sets userAssignedTransferListsLoadingState to its default state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "channelType": "nonVoice",
        "isLoading": true,
        "type": "app/TransferMenu/SET_USER_ASSIGNED_TRANSFER_LISTS_LOADING_STATE",
      },
      "channel": null,
    },
  },
}
`;

exports[`tearDownTransferMenuStates tearDownTransferMenuStates for voice interactions gets voice and currently selected interactionId 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`tearDownTransferMenuStates tearDownTransferMenuStates for voice interactions sets showTransferDialpad to its default state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "showTransferDialpad": false,
        "type": "app/TransferMenu/SET_SHOW_TRANSFER_DIAL_PAD",
      },
      "channel": null,
    },
  },
}
`;

exports[`tearDownTransferMenuStates tearDownTransferMenuStates for voice interactions sets transferSearchInput to its default state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "transferSearchInput": "",
        "type": "app/TransferMenu/SET_TRANSFER_SEARCH_INPUT",
      },
      "channel": null,
    },
  },
}
`;

exports[`tearDownTransferMenuStates tearDownTransferMenuStates for voice interactions sets transferTabIndex to its default state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "transferTabIndex": 0,
        "type": "app/TransferMenu/SET_TRANSFER_TAB_INDEX",
      },
      "channel": null,
    },
  },
}
`;

exports[`tearDownTransferMenuStates tearDownTransferMenuStates for voice interactions sets userAssignedTransferListsLoadingState to its default state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "channelType": "voice",
        "isLoading": true,
        "type": "app/TransferMenu/SET_USER_ASSIGNED_TRANSFER_LISTS_LOADING_STATE",
      },
      "channel": null,
    },
  },
}
`;

exports[`tearDownTransferMenuStates tearDownTransferMenuStates for voice interactions sets voice interactionTransferListsLoadingState to its true 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": undefined,
        "isLoading": true,
        "type": "app/AgentDesktop/SET_INTERACTION_TRANSFER_LISTS_LOADING_STATE",
      },
      "channel": null,
    },
  },
}
`;

exports[`transferInteraction Making a cold transfer of a nonvoice interaction to a queue calls CxEngage.interactions.transferToQueue 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        [MockFunction],
        Object {
          "interactionId": "id1",
          "queueId": "queue1",
          "transferType": "cold",
        },
        "TransferMenu",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction Making a cold transfer of a nonvoice interaction to a queue calls setShowTransferMenu 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction Making a cold transfer of a nonvoice interaction to a queue dispatches setIsColdTransferring to the store 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": "id1",
        "isColdTransferring": true,
        "type": "app/AgentDesktop/SET_IS_COLD_TRANSFERRING",
      },
      "channel": null,
    },
  },
}
`;

exports[`transferInteraction Making a cold transfer of a nonvoice interaction to a queue gets the interaction id, and channel type from the selected interaction and the index of the transfer tab 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`transferInteraction Making a cold transfer of a nonvoice interaction to a resource calls CxEngage.interactions.transferToResource 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        [MockFunction],
        Object {
          "interactionId": "id1",
          "resourceId": "resId1",
          "transferType": "cold",
        },
        "TransferMenu",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction Making a cold transfer of a nonvoice interaction to a resource calls setShowTransferMenu 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction Making a cold transfer of a nonvoice interaction to a resource dispatches setIsColdTransferring to the store 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": "id1",
        "isColdTransferring": true,
        "type": "app/AgentDesktop/SET_IS_COLD_TRANSFERRING",
      },
      "channel": null,
    },
  },
}
`;

exports[`transferInteraction Making a cold transfer of a nonvoice interaction to a resource gets the interaction id, and channel type from the selected interaction and the index of the transfer tab 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`transferInteraction Making a cold transfer of a nonvoice interaction when not passing neither a resource, queue or a transfer extension calls setShowTransferMenu 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction Making a cold transfer of a nonvoice interaction when not passing neither a resource, queue or a transfer extension dispatches setIsColdTransferring to the store 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": "id1",
        "isColdTransferring": true,
        "type": "app/AgentDesktop/SET_IS_COLD_TRANSFERRING",
      },
      "channel": null,
    },
  },
}
`;

exports[`transferInteraction Making a cold transfer of a nonvoice interaction when not passing neither a resource, queue or a transfer extension gets the interaction id, and channel type from the selected interaction and the index of the transfer tab 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`transferInteraction Making a cold transfer of a voice interaction to a transferExtension calls CxEngage.interactions.transferToExtension 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        [MockFunction],
        Object {
          "interactionId": "id1",
          "transferExtension": "transferExtension1",
          "transferType": "cold",
        },
        "TransferMenu",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction Making a cold transfer of a voice interaction to a transferExtension calls setShowTransferMenu 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction Making a cold transfer of a voice interaction to a transferExtension dispatches setIsColdTransferring to the store 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": "id1",
        "isColdTransferring": true,
        "type": "app/AgentDesktop/SET_IS_COLD_TRANSFERRING",
      },
      "channel": null,
    },
  },
}
`;

exports[`transferInteraction Making a cold transfer of a voice interaction to a transferExtension gets the interaction id, and channel type from the selected interaction and the index of the transfer tab 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`transferInteraction Making a warm transfer of a voice interaction when not passing neither a resource, queue or a transfer extension calls setShowTransferMenu 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction Making a warm transfer of a voice interaction when not passing neither a resource, queue or a transfer extension gets the interaction id, and channel type from the selected interaction and the index of the transfer tab 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`transferInteraction Making a warm transfer of voice interaction to a resource calls CxEngage.interactions.transferToResource 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        [MockFunction],
        Object {
          "interactionId": "id1",
          "resourceId": "resId1",
          "transferType": "warm",
        },
        "TransferMenu",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction Making a warm transfer of voice interaction to a resource calls setShowTransferMenu 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction Making a warm transfer of voice interaction to a resource dispatch startWarmTransfering to the store 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": "id1",
        "transferringTo": Object {
          "id": "resId1",
          "name": "Agent 1",
          "type": "agent",
        },
        "type": "app/AgentDesktop/START_WARM_TRANSFERRING",
      },
      "channel": null,
    },
  },
}
`;

exports[`transferInteraction Making a warm transfer of voice interaction to a resource gets the interaction id, and channel type from the selected interaction and the index of the transfer tab 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`transferInteraction call to CxEngage.interaction.transferToResource fails when trying to make a cold transfer of a voice interaction to a resource CxEngage.interactions.transferToResource call fails, its error gets logged in console and setIsColdTransferring is called again 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": "id1",
        "isColdTransferring": false,
        "type": "app/AgentDesktop/SET_IS_COLD_TRANSFERRING",
      },
      "channel": null,
    },
  },
}
`;

exports[`transferInteraction call to CxEngage.interaction.transferToResource fails when trying to make a cold transfer of a voice interaction to a resource calls CxEngage.interactions.transferToResource 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        [MockFunction],
        Object {
          "interactionId": "id1",
          "resourceId": "resId1",
          "transferType": "cold",
        },
        "TransferMenu",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction call to CxEngage.interaction.transferToResource fails when trying to make a cold transfer of a voice interaction to a resource calls setShowTransferMenu 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction call to CxEngage.interaction.transferToResource fails when trying to make a cold transfer of a voice interaction to a resource dispatches setIsColdTransferring to the store 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": "id1",
        "isColdTransferring": true,
        "type": "app/AgentDesktop/SET_IS_COLD_TRANSFERRING",
      },
      "channel": null,
    },
  },
}
`;

exports[`transferInteraction call to CxEngage.interaction.transferToResource fails when trying to make a cold transfer of a voice interaction to a resource gets the interaction id, and channel type from the selected interaction and the index of the transfer tab 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`transferInteraction call to CxEngage.interaction.transferToResource fails when trying to make a warm transfer of a voice interaction to a resource CxEngage.interactions.transferToResource call fails, its error gets logged in console and transferCancelled is dispatched 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": "id1",
        "type": "app/AgentDesktop/TRANSFER_CANCELLED",
      },
      "channel": null,
    },
  },
}
`;

exports[`transferInteraction call to CxEngage.interaction.transferToResource fails when trying to make a warm transfer of a voice interaction to a resource calls CxEngage.interactions.transferToResource 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        [MockFunction],
        Object {
          "interactionId": "id1",
          "resourceId": "resId1",
          "transferType": "warm",
        },
        "TransferMenu",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction call to CxEngage.interaction.transferToResource fails when trying to make a warm transfer of a voice interaction to a resource calls setShowTransferMenu 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`transferInteraction call to CxEngage.interaction.transferToResource fails when trying to make a warm transfer of a voice interaction to a resource dispatch startWarmTransfering to the store 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": "id1",
        "transferringTo": Object {
          "id": "resId1",
          "name": "Agent 1",
          "type": "agent",
        },
        "type": "app/AgentDesktop/START_WARM_TRANSFERRING",
      },
      "channel": null,
    },
  },
}
`;

exports[`transferInteraction call to CxEngage.interaction.transferToResource fails when trying to make a warm transfer of a voice interaction to a resource gets the interaction id, and channel type from the selected interaction and the index of the transfer tab 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;
